--- a/src/app/entradas/entradas.component.html
+++ b/src/app/entradas/entradas.component.html
@@ -1,13 +1,17 @@
-<div class="card mt-3" *ngFor="let entrada of entradasBlog">
-    <div class="card-header">
-        <a routerLink="{{ entrada.identrada }}">
-            <h1> {{ entrada.titulo }} </h1>
-        </a>
-    </div>
-    <div class="card-body">
-        <p> {{ entrada.contenido }} <p>
-    </div>
-    <div class="card-footer">
-        <h4> {{ entrada.fechaPublicacion | date:'hh:mm dd/MM/yyyy'}} </h4>
+<div class="row">
+    <div class="col-12 col-md-6" *ngFor="let entrada of entradasBlog">
+        <div class="card mt-3">
+            <div class="card-header">
+                <a routerLink="{{ entrada.identrada }}">
+                    <h1> {{ entrada.titulo }} </h1>
+                </a>
+            </div>
+            <div class="card-body">
+                <p> {{ entrada.contenido }} <p>
+            </div>
+            <div class="card-footer">
+                <h4> {{ entrada.fechaPublicacion | date:'hh:mm dd/MM/yyyy'}} </h4>
+            </div>
+        </div>
     </div>
 </div>
