--- a/src/app/ver-entrada/ver-entrada.component.html
+++ b/src/app/ver-entrada/ver-entrada.component.html
@@ -10,5 +10,6 @@
     </div>
 </div>
 <div class="text-center mt-3">
-    <button class="btn btn-danger btn-block btn-lg" (click)=goBack()>volver</button>
+    <button class="btn btn-warning btn-lg ml-5" (click)=eliminar() style="width:40%">borrar post</button>
+    <button class="btn btn-danger btn-lg" (click)=goBack() style="width:40%">volver</button>
 </div>
